syntax = "proto3";

package order;

message UserRequest {
  string id = 1;
  string email = 2;
}

message OrderResponse {
  string id = 1;
  string customer_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  int32 total_value = 5;
  string withdraw_day = 6;
  string withdraw_time = 7;
  string status = 8;
}

message OrderListRequest {
  UserRequest user = 1;
}

message OrderListResponse {
  repeated OrderResponse orders = 1;
}

message OrderCreateRequest {
  string customer_id = 1;
  string product_id = 2;
  int32 quantity = 3;
  int32 total_value = 4;
  string withdraw_day = 5;
  string withdraw_time = 6;
}

message OrderCreateResponse {
  bool status = 1;
  string message = 2;
}

service Order {
  rpc List(OrderListRequest) returns (OrderListResponse);
  rpc Create(OrderCreateRequest) returns (OrderCreateResponse);
}

